# toys

mijia-smart-thermometer/: Cargo.toml
mijia-smart-thermometer/src/: main.rs
mijia-smart-thermometer/ui/: appwindow.slint  comfort-level.slint  time-screen.slint  types.slint
