[package]
name = "mijia-smart-thermometer"
version = "0.1.0"
authors = ["Qinxiang Yang <me@yqxpro.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
rand = "0.8.5"
slint = "1.6"
tokio = {version = "1.38.0", features = ["full"] }

[build-dependencies]
slint-build = "1.6"
